# operating-unit

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
account_financial_report_operating_unit/: README.rst
account_financial_report_operating_unit/i18n/: es.po
account_operating_unit/: README.rst
account_operating_unit/i18n/: account_operating_unit.pot  es.po  nl_NL.po
account_operating_unit/models/: account_move.py  account_move_line.py
account_operating_unit/readme/: CONTRIBUTORS.md
account_operating_unit/tests/: test_account_reconcile.py  test_operating_unit_security.py
account_operating_unit/views/: account_move_view.xml
account_operating_unit_access_all/i18n/: es.po
analytic_operating_unit/: README.rst
analytic_operating_unit/i18n/: es.po  nl_NL.po
contract_operating_unit/i18n/: nl_NL.po
hr_operating_unit/i18n/: nl_NL.po
mrp_operating_unit/: README.rst
operating_unit/i18n/: es.po  it.po  nl_NL.po
operating_unit_access_all/: README.rst
operating_unit_access_all/i18n/: es.po
product_operating_unit/i18n/: de.po  nl_NL.po
project_operating_unit/i18n/: nl_NL.po
purchase_operating_unit/: README.rst
purchase_operating_unit/i18n/: es.po
purchase_stock_default_operating_unit/: __manifest__.py
res_partner_operating_unit/: README.rst  __manifest__.py  hooks.py
sale_operating_unit/i18n/: es.po
sale_stock_default_operating_unit/: __manifest__.py
sales_team_operating_unit/: README.rst
setup/_metapackage/: pyproject.toml
stock_operating_unit/: README.rst  __manifest__.py
stock_operating_unit_access_all/: README.rst
(+34 files in other folders)
