[project]
name = "odoo-addons-oca-operating-unit"
version = "18.0.20250506.0"
dependencies = [
    "odoo-addon-analytic_operating_unit==18.0.*",
    "odoo-addon-mrp_operating_unit==18.0.*",
    "odoo-addon-operating_unit==18.0.*",
    "odoo-addon-sales_team_operating_unit==18.0.*",
    "odoo-addon-stock_operating_unit==18.0.*",
    "odoo-addon-stock_operating_unit_access_all==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
